# VeriEQL

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
test/: test_env.py
veri_eql/: __init__.py  constants.py  main.py  utils.py
veri_eql/formulas/: _utils.py
veri_eql/formulas/columns/: attribute.py  base_column.py
veri_eql/formulas/expressions/: base_expression.py  digits.py  expression.py  null.py  operator.py  sym_func.py  symbol.py
veri_eql/formulas/tables/: alias_table.py  base_table.py  distinct_table.py  empty_table.py  except_all_table.py  except_table.py  fake_projection_table.py  fetch_table.py  filter_table.py  intersect_all_table.py  intersect_table.py  limit_table.py  offset_table.py  order_by_table.py  product_table.py  projection_table.py  stack_table.py  union_all_table.py  union_table.py  value_table.py
veri_eql/formulas/tuples/: _field.py  alias_tuple.py  base_tuple.py  concate_tuple.py  deleted_tuple.py  distinct_tuple.py  fake_projection_tuple.py  filter_tuple.py  group_by_tuple.py  inner_join_tuple.py  limit_tuple.py  natural_join_tuple.py  null_tuple.py  (+5 more)
veri_eql/paper/: counterexamples.csv  coverage.csv  coverage_no_IC.csv  time_bound.csv  varying_bound_Calcite.csv  varying_bound_LeetCode.csv  varying_bound_Literature.csv  varying_timeout_Calcite.csv  varying_timeout_LeetCode.csv  varying_timeout_Literature.csv
veri_eql/verifiers/: bag_semantics_verifier.py  list_semantics_verifier.py  verifier.py
veri_eql/visitors/: visitor.py
veri_eql/writers/: script.py
veri_eql/z3py_libs/: z3.py  z3_copy.py  z3rcf.py
(+59 files in other folders)
